--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,5 +1,5 @@
 .cards {
-  @apply grid gap-4 my-4;
+  @apply grid gap-4 my-4 md:relative;
   .card-inner {
     @apply bg-primary px-8 py-4 flex flex-col gap-8;
 
@@ -83,7 +83,7 @@
     .card-inner {
       position: absolute;
       overflow: hidden;
-      left: rem(560);
+      left: 0;
       width: auto;
       height: auto;
       transform-origin: center left;
@@ -106,10 +106,12 @@
       -o-transition:
         visibility 1s linear,
         opacity 0s linear;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      overflow-y: auto;
 
       &.active {
-        position: relative;
-        left: 0;
         opacity: 1;
         visibility: visible;
       }
